--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <hi>Aqui vamos a hacer un blog post</hi>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <hi>Este en el titulo atractivo e interesante del post</hi>
+                <p>Y este es el parrafo de inicio donde vamos a explicarlas cosas increibles que se puden hacer con ramas</p>
+            </div>
+        </div>
+
     </body>
 </hatml>
