--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <hi>Este en el titulo atractivo e interesante del post</hi>
                 <p>Y este es el parrafo de inicio donde vamos a explicarlas cosas increibles que se puden hacer con ramas</p>
