--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <spam id="tagline">Tu blog de confianza</spam>
             </div>
             <div id="post">
                 <hi>Este en el titulo atractivo e interesante del post</hi>
