agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <hi>Este en el titulo atractivo e interesante del post</hi>
                 <p>Y este es el parrafo de inicio donde vamos a explicarlas cosas increibles que se puden hacer con ramas</p>
+                <p>Los Blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. pero estadisticamente no lo eres ... por ahora.</p>
             </div>
         </div>
 
