--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <spam id="tagline">Tu blog de confianza</spam>
+                <spam id="tagline">Tu blog de cabecera</spam>
             </div>
             <div id="post">
                 <hi>Este en el titulo atractivo e interesante del post</hi>
